Swapped APR for Popularity Poll on the homepage. Changed builds and md plan borders to the customized border color instead of the previous fixed color. Changed the team build icons to display the last icon instead of +1 if only 1 remains. Changed quoted comments when replying to show a collapsed version (click see more to view the whole thing).

--- a/src/app/components/contentActions/ActionTemplate.module.css
+++ b/src/app/components/contentActions/ActionTemplate.module.css
@@ -26,8 +26,8 @@
 }
 
 .cardButton.middle {
-    border-left: 2px #7c6a55 dashed;
-    border-right: 2px #7c6a55 dashed;
+    border-left: 2px var(--primary-border-color) dashed;
+    border-right: 2px var(--primary-border-color) dashed;
 }
 
 .cardButton:visited {
