--- a/src/app/components/contentCards/TeamBuild.module.css
+++ b/src/app/components/contentCards/TeamBuild.module.css
@@ -1,6 +1,6 @@
 .teamBuild {
     position: relative;
-    border: 2px #7c6a55 solid;
+    border: 2px var(--primary-border-color) solid;
     border-radius: 12px;
     box-sizing: border-box;
     display: flex;
@@ -25,7 +25,7 @@
 .teamBuildIconRail {
     display: flex;
     flex-direction: column;
-    border: 2px #7c6a55 solid;
+    border: 2px var(--primary-border-color) solid;
     border-radius: 14px;
     background: var(--bg-secondary);
     position: absolute;
@@ -79,7 +79,7 @@
 .teamBuildButtonsContainer {
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    border-top: 2px #7c6a55 dashed;
+    border-top: 2px var(--primary-border-color) dashed;
     background: var(--bg-primary);
     z-index: 4;
     height: 2.25rem;
